[gd_scene load_steps=3 format=3 uid="uid://bq6b5e7e6whsj"]

[ext_resource type="Script" uid="uid://di2wu5vgh2rya" path="res://MainMenu/Lobby/Notifications/NotificationBubble.gd" id="1_obb8g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obb8g"]
bg_color = Color(0.11489687, 0.1148968, 0.11489678, 1)

[node name="NotificationBubble" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_obb8g")
script = ExtResource("1_obb8g")

[node name="_" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NotificationInformation" type="VBoxContainer" parent="_"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Subject" type="Label" parent="_/NotificationInformation"]
unique_name_in_owner = true
layout_mode = 2

[node name="Timestamp" type="Label" parent="_/NotificationInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 0

[node name="NotificationType" type="Label" parent="_/NotificationInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="Button" parent="_"]
layout_mode = 2
text = "Deletar"

[connection signal="pressed" from="_/Delete" to="." method="_on_delete_pressed"]
